--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
   <div class="container">
     <div class="one">
       <h1 class="one">
-        Hey
-        <span id="name"></span>
+        Hey Veraa
       </h1>
       <p class="two" id="greetingText">Gimana Moodnya hari ini ?</p>
     </div>
