--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <div class="one">
       <h1 class="one">
         Hey Veraa
+        <span id="name"></span>
       </h1>
       <p class="two" id="greetingText">Gimana Moodnya hari ini ?</p>
     </div>
