--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <img src="img/hat.svg" alt="" class="hat" />
       <div class="wish">
         <h3 class="wish-hbd">Verawati</h3>
-        <h5 id="wishText">Semoga tetap sehat ya dan maaf baru ngucapin karena harusnya kita udah lama kenal wkwk </h5>
+        <h5 id="wishText">HBD ya meski terlambat Semoga tetap sehat ya dan maaf baru ngucapin karena harusnya kita udah lama kenal wkwk </h5>
       </div>
     </div>
     <div class="seven">
@@ -131,7 +131,7 @@
       </svg>
     </div>
     <div class="nine">
-      <p>Semoga Happy ya baca ini dan ayo dong sering ketemu.</p>
+      <p>Semoga Happy ya baca ini dan ayo dong sering ketemu dan sering balas chat aku :D.</p>
       <p id="replay">klau mau liat lagi klik ini.</p>
       <p class="last-smile">:)</p>
     </div>
