--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="container">
     <div class="one">
       <h1 class="one">
-        Hey Veraa
+        Hey
         <span id="name"></span>
       </h1>
       <p class="two" id="greetingText">Gimana Moodnya hari ini ?</p>
